--- a/care.html
+++ b/care.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <p>still working on this</p>
+<body style="background-image: url('https://www.the3rdsequence.com/texturedb/thumbnail/30/512/rough+sea.jpg');">
+    <p >
+    <p>Quarantining any new or ill fish.
+        Providing a high-quality diet.
+        Monitoring the water quality.
+        Maintaining a regular schedule of cleanings, water changes, and filter replacements.
+        Make sure there are no bullies in the tank.
+        Avoid stressing your fish with sudden water temperature changes and loud noises.</p>
+
+
 </body>
 </html>
