--- a/care.html
+++ b/care.html
@@ -5,14 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<link rel="stylesheet" href="styles/care.css">
 <body style="background-image: url('https://www.the3rdsequence.com/texturedb/thumbnail/30/512/rough+sea.jpg');">
-    <p >
-    <p>Quarantining any new or ill fish.
-        Providing a high-quality diet.
-        Monitoring the water quality.
-        Maintaining a regular schedule of cleanings, water changes, and filter replacements.
-        Make sure there are no bullies in the tank.
-        Avoid stressing your fish with sudden water temperature changes and loud noises.</p>
+    <main class="contain">
+        <aside class="left-sidebar">
+            <nav>
+                <ul>
+                    <li><a href = "/"> Home</a></li>
+                    <li><a href = "/care.html"> Care Info</a></li>
+                    <li><a href = "/harvest.html"> Harvest Info</a></li>
+                </ul>
+            </nav>
+             </aside>
+             
+        <div class="careinfo">
+            <p><b>Quarantining any new or ill fish.</b></p>
+            <p><b>Providing a high-quality diet.</b></p>
+            <p><b>Monitoring the water quality.</b></p>
+            <p><b>Maintaining a regular schedule of cleanings, water changes, and filter replacements.</b></p>
+            <p><b>Make sure there are no bullies in the tank.</b></p>
+            <p><b>Avoid stressing your fish with sudden water temperature changes and loud noises.</b></b></p>
+            
+        </div>
+    </main>
 
 
 </body>
